--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  api-fetcher:
-    build: ./docker/data_crawler
-    container_name: data_crawler
+  data-crawler:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env
     volumes:
-      - ./data:/data
+      - ../data:/app/data
+    command: ["python", "data_crawler.py"]
