update project structure: replace data_crawler.py with main.py, add data_utils.py, and update Docker configurations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     env_file:
       - .env
     volumes:
-      - ../data:/app/data
-    command: ["python", "data_crawler.py"]
+      - ./data:/app/data
+    command: ["python", "main.py"]
