--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - IS_TEST=${IS_TEST}
     volumes:
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - vnstock:/app/data
+      - vnstock:/app/logs
     command: [ "python", "src/companies.py" ]
 
   financial-data:
@@ -18,9 +20,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - IS_TEST=${IS_TEST}
     volumes:
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - vnstock:/app/data
+      - vnstock:/app/logs
     command: [ "python", "src/financial_data.py" ]
 
   company-info:
@@ -29,9 +33,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - IS_TEST=${IS_TEST}
     volumes:
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - vnstock:/app/data
+      - vnstock:/app/logs
     command: [ "python", "src/company_info.py" ]
 
   company-officer:
@@ -40,9 +46,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - IS_TEST=${IS_TEST}
     volumes:
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - vnstock:/app/data
+      - vnstock:/app/logs
     command: [ "python", "src/officers.py" ]
 
   company-shareholder:
@@ -51,9 +59,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - IS_TEST=${IS_TEST}
     volumes:
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - vnstock:/app/data
+      - vnstock:/app/logs
     command: [ "python", "src/shareholders.py" ]
 
   company-dividends:
@@ -62,9 +72,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - IS_TEST=${IS_TEST}
     volumes:
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - vnstock:/app/data
+      - vnstock:/app/logs
     command: [ "python", "src/dividends.py" ]
 
   company-stock-quote:
@@ -73,7 +85,13 @@ services:
       dockerfile: Dockerfile
     env_file:
       - .env
+    environment:
+      - IS_TEST=${IS_TEST}
     volumes:
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - vnstock:/app/data
+      - vnstock:/app/logs
     command: [ "python", "src/stock_quote.py" ]
+
+
+volumes:
+  vnstock:
