--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GCS_CREDENTIALS=../gcs_credentials.json
+GCS_CREDENTIALS=/app/gcs_credentials.json
 GCS_BUCKET=vnstock-datalake
 DATA_DIR=/app/data
 LOG_DIR=../logs
