--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ COMPANY_INCOME_STATEMENT_FILE=${DATA_DIR}/income_statement.csv
 COMPANY_BALANCE_SHEET_FILE=${DATA_DIR}/balance_sheet.csv
 COMPANY_CASH_FLOW_FILE=${DATA_DIR}/cash_flow.csv
 COMPANY_RATIO_FILE=${DATA_DIR}/ratio.csv
-IS_TEST=True
+IS_TEST=False
